# ProgressiveIndexing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format.py  gentbl.py  result.csv  result.txt  run.py
.github/workflows/: ccpp.yml  main.yml
plots/workload/: periodic.csv  plot.R  random.csv  seq_zoom_in.csv  sequential.csv  sequential_random.csv  skew.csv  zoom_in.csv  zoom_in_alt.csv  zoom_out_alt.csv
scripts/: clean.py  format.py  generate_latex_table.py  generate_tpch_data.py  merge_databases.py  mount_hugetlbfs.sh  plots_main.py  run_correctness.py  run_experiments.py  run_skyserver.py  run_syntethic.py  sqlite.py
scripts/cost_model/: generate_constants.py  measure.cpp
scripts/plots/: cost_model.R  delta.R  generate_costmodel_out.sh  generate_delta_out.sh  plot.py  plot_deltas.R  plot_queries.R  plot_updates.R  plot_workload.R  progressiveidx_vs_baseline.R  skyserver_dist.R  skyserver_workload.R
scripts/tpch/: generate_tpch.py
src/: CMakeLists.txt  PIMain  main.cpp  update.cpp
src/cracking/: adaptive_adaptive_indexing.cpp  cracking_engine.cpp  cracking_updates.cpp  cracking_util.cpp  index.cpp  predicated_cracking.cpp  progressive_stochastic_cracking.cpp  rewired_cracking.cpp  standard_cracking.cpp  stochastic_cracking.cpp
src/experiment/: CMakeLists.txt  experiments.cpp
src/full_index/: bulkloading_bp_tree.cpp  hybrid_radix_insert_sort.cpp
src/generate/: generate_column.cpp  generate_workload.cpp
src/include/: setup.h  structs.h
src/include/cracking/: adaptive_adaptive_indexing.h  cracking_engine.h  cracking_updates.h  cracking_util.h  index.h  predicated_cracking.h  progressive_stochastic_cracking.h  rewired_cracking.h  standard_cracking.h  stochastic_cracking.h
src/include/experiment/: experiments.hpp
src/include/full_index/: bulkloading_bp_tree.h  hybrid_radix_insert_sort.h
src/include/generate/: random.h
src/include/index/: bptree.hpp  index.hpp
src/include/input/: file_manager.hpp
src/include/measurements/: cost_model.hpp
src/include/progressive/: constants.h  incremental.h  progressive_index.hpp  progressive_indexing.h  progressive_quicksort.hpp  qs_avl_tree.hpp
src/include/sort/: sort.hpp
src/include/util/: abrt.h  assert.h  avl_tree.h  binary_search.h  binary_search.hpp  file_manager.h  hybrid_radix_insert_sort.h  rewiring.h
src/index/: CMakeLists.txt  bptree.cpp  index.cpp
src/input/: CMakeLists.txt  file_manager.cpp  generate_column.cpp  generate_query.cpp
src/measurements/: CMakeLists.txt  Findjemalloc.cmake  alloc.cpp  cost_model.cpp  match  match.cpp  sort_cost  sort_cost.cpp
src/progressive/: CMakeLists.txt  progressive_bucketsort_equiheight.cpp  progressive_cracking.cpp  progressive_cracking_cost_model.cpp  progressive_index.cpp  progressive_indexing.cpp  progressive_quicksort.cpp  progressive_radixsort_lsd.cpp  progressive_radixsort_msd.cpp  progressive_radixsort_msd_noquick.cpp  qs_avl_tree.cpp
src/sort/: CMakeLists.txt  sort.cpp
src/util/: CMakeLists.txt  asserts.cpp  avl_tree.cpp  binary_search.cpp  file_manager.cpp  hybrid_radix_insert_sort.cpp  print_main.cpp  updates.cpp
test/: CMakeLists.txt  ProgressiveUpdatesTests.cbp  test.cpp
